--- a/build.gradle
+++ b/build.gradle
@@ -31,3 +31,7 @@ dependencies {
    testCompile 'junit:junit:4.7'
    compile 'ch.qos.logback:logback-classic:1.0.11'
 }
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '1.6'
+}
